--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
   <div id="widget-root"></div>
 
   <!-- Click2Connect Widget -->
- <script type="text/javascript" src="//anadolusigorta.alo-tech.com/click2connects/click2connect.js?widget_key=ahRzfm11c3RlcmktaGl6bWV0bGVyaXIhCxIUQ2xpY2syQ29ubmVjdFBhY2thZ2UYgIC63tu-6AgMogEbYW5hZG9sdXNpZ29ydGEuYWxvLXRlY2guY29t"></script>
+ <script type="text/javascript" src="//naga.callcenterstudio.com/click2connects/click2connect.js?widget_key=ahRzfm11c3RlcmktaGl6bWV0bGVyaXIhCxIUQ2xpY2syQ29ubmVjdFBhY2thZ2UYgIC6kNu97ggMogEZbmFnYS5jYWxsY2VudGVyc3R1ZGlvLmNvbQ"></script>
  <script type="text/javascript">
 	startWidget();
 </script>
+
 
 
 
